Refactored app structure to be organized by function. Each html and its controller are in their own directory.

--- a/app/index.html
+++ b/app/index.html
@@ -37,9 +37,13 @@
 
     <!-- your app's js -->
     <!-- build:js scripts/scripts.js -->
-    <script src="scripts/app.js"></script>
-    <script src="scripts/controllers.js"></script>
-    <script src="scripts/configuration.js"></script>
+    <script src="client/services/services.js"></script>
+    <script src="client/intro/intro.js"></script>
+    <script src="client/auth/auth.js"></script>
+    <script src="client/home/home.js"></script>
+    <script src="client/contacts/contacts.js"></script>
+    <script src="client/configuration.js"></script>
+    <script src="client/app.js"></script>
     <!-- endbuild -->
   </head>
 
