Added a delete button on the queue page, separated out the home page, to allow for all settings to be on a single page

--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
     <!-- endbuild -->
 </head>
 
-<body ng-app="LovedOneNotifier">
+<body ng-app="antiSocialite">
     <ion-nav-bar class="nav-title-slide-ios7 bar-assertive">
         <ion-nav-back-button class="button-icon ion-arrow-left-c">
         </ion-nav-back-button>
