--- a/app/index.html
+++ b/app/index.html
@@ -38,6 +38,8 @@
     <script src="lib/ionic/release/js/ionic.js"></script>
     <script src="lib/ionic/release/js/ionic-angular.js"></script>
     <script src="lib/angular-local-storage/dist/angular-local-storage.js"></script>
+    <script src="lib/angular-http-auth/src/http-auth-interceptor.js"></script>
+    <script src="lib/lodash/lodash.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
