Fully functioning with time displayed in base case

--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,7 @@
     <!-- bower:css -->
     <link rel="stylesheet" href="lib/ionic/release/css/ionic.css" />
     <link rel="stylesheet" href="lib/open-sans-fontface/open-sans.css" />
+    <link href="lib/ionic-timepicker/dist/style.css" rel="stylesheet">
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -40,6 +41,9 @@
     <script src="lib/angular-local-storage/dist/angular-local-storage.js"></script>
     <script src="lib/angular-http-auth/src/http-auth-interceptor.js"></script>
     <script src="lib/lodash/lodash.js"></script>
+    <!-- path to ionic/angularjs js -->
+    <script src="lib/ionic-timepicker/dist/templates.js"></script>
+    <script src="lib/ionic-timepicker/dist/ionic-timepicker.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
